Fix images stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,12 @@ p, a, li, label {
     margin-top: 50px;
 }
 
+.image-styling {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
 footer p, footer a {
     font-size: 16px;
     color: #fff;
@@ -112,12 +118,6 @@ footer p, footer a {
     border-radius: 15px;
     padding: 20px;
     border-style: none;
-}
-
-.get-involved-image {
-    width: 100%;
-    object-fit: cover;
-    border-radius: 15px;
 }
 
 /* ------------------------------------------ Get Involved Cards */
